<resources>
    <string name="app_name">HTIApp</string>
    <string name="onboarding_screen">Onboarding screen</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">ㅤEnter e-mail</string>
    <string name="prompt_code">ㅤВведите код</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Продолжить</string>
    <string name="full_name">ㅤFull name</string>
    <string name="phone_number">ㅤВведите номер телефона</string>
    <string name="register">Продолжить</string>
    <string name="confirm_password">ㅤConfirm password</string>
    <string name="remember_password">Запомнить пароль</string>
    <string name="register_invite">Ещё нет аккаунта? Авторизуйтесь</string>
    <string name="agree">I agree with terms and conditions</string>
    <string name="already_registered">Уже зарегистрированы? Авторизуйтесь!</string>
    <color name="blue">#0000FF</color>
    <string name="prompt_password">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_code">ㅤВведите код</string>
    <string name="submit_code">Submit code</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="register_text_enter_code">Мы отправили SMS с кодом проверки на Ваш телефон</string>
    <string name="register_sign">Регистрация</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_achievements">Мои достижения</string>
    <string name="add_avatar">Добавить аватарку</string>
    <string name="level">2 уровень</string>
    <string name="aytal">Айтал Андреев</string>
    <string name="aytal_phone_number">+79142260516</string>
    <string name="task_of_the_day">Задача дня</string>
    <string name="tasks">Задания</string>
    <string name="send_your_first_comment">Отправьте свой первый комментарий ㅤㅤ1\/1</string>
    <string name="write_review">Напишите отзыв о приложении ㅤㅤㅤㅤㅤㅤ0\/1</string>
    <string name="exit">Выход</string>
</resources>