<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mainfragments.AchievementsFragment"
    android:background="#1E293B">

    <TextView
        android:id="@+id/my_achievements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="67dp"
        android:fontFamily="@font/ruberoid_bold"
        android:text="@string/my_achievements"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="324dp"
        android:background="@drawable/button"
        android:fontFamily="@font/inter_bold"
        android:text="@string/add_avatar"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/level"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="start"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="432dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/material_dynamic_primary20"
        android:clickable="false"
        android:fontFamily="@font/inter_regular"
        android:text="@string/level"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_lens_24"
        android:layout_marginLeft="16dp"
        android:backgroundTint="#334155"
        app:layout_constraintBottom_toTopOf="@+id/level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_achievements" />
</androidx.constraintlayout.widget.ConstraintLayout>